# ML-Homework4

./: .gitignore  README.md  pyproject.toml  tmp_doc_template_summary.json  ~$学生实验报告.docx  学生实验报告.docx
.pytest-tmp/test_load_raw_dataset_handles_0/: config.toml
.pytest-tmp/test_run_all_pipeline_generate0/processed/: test_processed.csv  train_processed.csv
.pytest-tmp/test_run_all_pipeline_generate0/raw/: adult.data  adult.test
configs/: default.toml
src/adult_lab/: __init__.py  cli.py  config.py  data.py  metrics.py  pipeline.py  preprocessing.py
src/adult_lab/models/: __init__.py  forest.py  tree.py
tests/: conftest.py  test_data.py  test_metrics.py  test_models.py  test_pipeline.py  test_preprocessing.py
