[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "adult-lab"
version = "0.1.0"
description = "Adult dataset decision tree and random forest experiment pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "python-docx>=1.2.0",
  "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
adult-lab = "adult_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adult_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
